--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,26 +9,23 @@
 	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<div class="formContainer">
-	<div class="image">
-	</div>
-	<h2>Member Login</h2>
-	<form action="#">
-		<input type="text" name="username" placeholder="Username">
-		<input type="password" name="password" placeholder="Password">
-	</form>
-	<button>Sign in</button>
-	<footer>
-		<div>
-			<input type="radio" name="remember" value="remember">
-			<span>Remember me</span>
+	<h3>Welcome to ToDoList</h3>
+	<div class="flex-wrapper">
+		<div class="add-todo-wrapper">
+			<div class="input-wrapper">
+				<input type="text" id="description-task">
+			</div>
+			<div class="button-wrapper">
+				<button id="add-task-btn">Add</button>
+			</div>
 		</div>
-		<a href="#">Forgot Password?</a>
-	</footer>
-</div>
+		<h2>today's challenges</h2>
+		<div class="todos-wrapper">
+			
+		</div>
+	</div>
 
-
-
-
+	<script src="/index.js"></script>
 </body>
+
 </html>
